Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2139

MSVC 2012 Error - Cannot compile due to BoostThreadFactory

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • 0.9.1
    • 0.9.2
    • C++ - Library
    • MSVC 2012 x64

    Description

      Errors given are:

      error C2664: 'std::thread::id::id(const std::thread &)' : cannot convert parameter 1 from 'boost::thread::id' to 'const std::thread &' C:\Users\chris\Desktop\workspace\build\thrift\thrift-0.9.1\lib\cpp\src\thrift\concurrency\BoostThreadFactory.cpp 101 1 libthrift

      error C2664: 'std::thread::id::id(const std::thread &)' : cannot convert parameter 1 from 'boost::thread::id' to 'const std::thread &' C:\Users\chris\Desktop\workspace\build\thrift\thrift-0.9.1\lib\cpp\src\thrift\concurrency\BoostThreadFactory.cpp 165 1 libthrift

      Attachments

        1. THRIFT-2139.patch
          3 kB
          Alex Loukissas

        Activity

          People

            Unassigned Unassigned
            chris5287 Chris Stylianou
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: