THRIFT-2139: MSVC 2012 Error - Cannot compile due to BoostThreadFactory Client: cpp Patch: Alex Loukissas