lib/cpp/src/thrift/concurrency/BoostThreadFactory.cpp
@@ -19,6 +19,8 @@
 
 #include <thrift/thrift-config.h>
 
+#ifdef USE_BOOST_THREAD
+
 #include <thrift/concurrency/BoostThreadFactory.h>
 #include <thrift/concurrency/Exception.h>
 
@@ -178,3 +180,5 @@ void BoostThreadFactory::setDetached(bool value) { impl_->setDetached(value); }
 Thread::id_t BoostThreadFactory::getCurrentThreadId() const { return impl_->getCurrentThreadId(); }
 
 }}} // apache::thrift::concurrency
+
+#endif // USE_BOOST_THREAD
